<resources>
    <string name="app_name">LittleBarCommands</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tablestitle">Mesas</string>
    <string name="download">Descargando lista de menús</string>
    <string name="downloadError">Error en descarga</string>
    <string name="downloadErrorText">Se ha producido un error mientras se realizaba la descarga</string>
    <string name="name">Nombre</string>
    <string name="image">Imagen</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="suggestions">Sugerencias</string>
    <string name="remove_dish">¿Desea eliminar plato?</string>
    <string name="dish_removed">Plato eliminado</string>
    <string name="total">Total</string>
    <string name="finish_command">" €. ¿Finalizar pedido?"</string>
    <string name="table_available">Mesa disponible</string>
    <string name="extras">Extras</string>
    <string name="extras_text">Escribir extras (separar por comas)</string>
</resources>
